# coding-style-guide

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .sonarcloud-hotspot-review.md  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_ISSUES_CREATED.md  GITHUB_ISSUES_SUMMARY.md  IMPROVEMENT_PLAN.md  ISSUE_81_CLOSURE_SUMMARY.md  LICENSE  README.md  SECURITY.md  SONAR_HOTSPOTS_QUICKSTART.md  TERRAFORM_RATIO_IMPROVEMENT_PLAN.md  cleanup-after.txt  cleanup-before.txt  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  page-index.json  pyproject.toml  scan-sonar.sh  sitemap.xml  sonar-project.properties
.claude/: settings.local.json
.github/: HOTFIX_TEST.md  PULL_REQUEST_TEMPLATE.md  cspell.json  dependabot.yml  markdown-link-check-config.json  release.yml  versions.yml
.scannerwork/: report-task.txt
08_anti_patterns/: index.html
09_refactoring/: index.html
12_tutorials/: index.html
ISSUE_81_CLOSURE_SUMMARY/: index.html
TERRAFORM_RATIO_IMPROVEMENT_PLAN/: index.html
changelog/: index.html
cli/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: ISSUE_81_CLOSURE_SUMMARY.md  TERRAFORM_RATIO_IMPROVEMENT_PLAN.md  changelog.md  changelog.md.bak  faq.md  glossary.md  index.md  project_status.md  topic_index.md
examples/: README.md
faq/: index.html
glossary/: index.html
hooks/: generate_page_index.py
javascripts/: bookmarks.js
project_status/: index.html
scripts/: analyze_code_ratio.py  check_action_versions.py  check_docker_versions.sh  (+19 more)
(+313 files in other folders)
