[project]
name = "coding-style-guide"
version = "1.2.0"
description = "Comprehensive coding style guide and best practices documentation"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "pre-commit>=4.3.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
